tests/ui/const-generics/assoc_const_as_type_argument.stderr
error[E0575]: expected associated type, found associated constant `Trait::ASSOC`
  --> $DIR/assoc_const_as_type_argument.rs:8:11
   |
LL |     bar::<<T as Trait>::ASSOC>();
   |           ^^^^^^^^^^^^^^^^^^^ not a associated type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0575`.
